<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">partial_helper_app</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="msg_buta_warna_mera">Buta Warna Merah-Hijau
   Buta warna ini terbagi menjadi beberapa   macam, yaitu :
Deuteranopia, yaitu ketika pengidap melihat warna merah menjadi kuning kecoklatan dan warna hijau menjadi krem.
Protanopia, yaitu ketika pengidap melihat warna merah tampak hitam, warna jingga dan hijau akan terlihat kuning, dan sulit membedakan warna ungu dan biru.
Protanomali, yaitu ketika pengidap melihat warna jingga, merah, dan kuning tampak lebih gelap menyerupai warna hijau.
Deuteranomalia, yaitu ketika pengidap melihat warna hijau dan kuning menjadi kemerahan, dan sulit membedakan warna ungu dan biru.
Buta Warna Biru-Kuning
    Buta warna biru-kuning terbagi menjadi 2 macam, yaitu :
Tritanomali, yaitu ketika pengidap melihat warna biru tampak lebih hijau, serta sulit membedakan kuning dan merah.
Tritanopia, yaitu ketika pengidap melihat warna biru lebih tampak hijau dan warna kuning tampak menjadi ungu atau abu-abu muda.</string>
<string name="msg_penyebab_buta">Penyebab Buta 
Warna Parsial</string>
<string name="msg_penyebab_buta2">Penyebab 
Buta Warna Parsial</string>
<string name="msg_buta_warna_pars">Buta Warna parsial, juga dikenal sebagai Dischromatopsia atau anomali warna parsial, adalah kondisi di mana seseorang mengalami kesulitan dalam membedakan beberapa tertentu. Pada umumnya, buta warna parsial disebabkan oleh ketidaknormalan dalam sel-sel reseptor warna mata, yang dikenali sebagai kerucut. Terdapat 3 jenis kerucut yang berbeda, masing-masing sensitif terhadap warna-warna tertentu (merah, hijau, dan biru). Contohnya, seseorang dengan buta warna parsial merah-hijau mungkin mengalami kesulitan dalam membedakan antara warna merah dan hijau. 

Buta warna parsial umumnya merupakan kondisi bawaan yang diwariskan secara genetik, meskipun dalam beberapa kasus dapat disebabkan oleh cedera atau gangguan tertentu. Penting untuk dicatat bahwa buta warna parsial berbeda dengan buta warna total, di mana seseorang benar-benar tidak melihat atau membedakan warna sama sekali. Orang yang buta warna parsial masih dapat melihat warna, tetapi mereka mungkin mengalami kesulitan tertentu dalam membedakan warna-warna tertentu. </string>
<string name="msg_bantuan_warna">Bantuan Warna  
Dalam Genggamanmu</string>
<string name="msg_pengobatan_buta">Pengobatan Buta
Warna Parsial</string>
<string name="msg_pengobatan_but">Pengobatan 
Buta Warna Parsial</string>
<string name="lbl_buka_kamera">Buka Kamera</string>
<string name="lbl_kembali">Kembali</string>
<string name="msg_jenis_buta_buta">Jenis Buta Buta 
Warna Parsial</string>
<string name="msg_jenis_buta_warn">Jenis Buta Warna Parsial</string>
<string name="msg_apa_itu_buta_w2">Apa  itu Buta Warna Parsial?</string>
<string name="msg_hingga_saat_ini">Hingga saat ini, tidak ada pengobatan yang dapat menyembuhkan buta warna parsial. Meskipun tidak membahayakan jiwa, penderitanya tetap memerlukan penanganan kesehatan secara profesional dan beradaptasi dengan kondisinya agar dapat menjalani aktivitas sehari-hari dengan kualitas hidup yang baik.

Bagi orang tua, penting untuk mengenali gejala dan tanda-tanda buta warna pada anak. Tujuannya adalah agar orang tua bisa membantu anak beradaptasi dengan kondisinya sehingga aktivitas belajar atau kesehariannya dapat berjalan normal.

Untuk beradaptasi dengan kondisi buta warna parsial, penderita bisa mengupayakan beberapa cara berikut:
Menggunakan label warna untuk pakaian dan alat penting lainnya.
Meminta bantuan kerabat atau keluarga saat mengalami situasi sulit yang berhubungan dengan warna, misalnya ketika mencocokkan warna pakaian atau melihat apakah daging yang dimasak telah matang.
Menghafalkan urutan warna yang benar pada hal-hal penting yang sering ditemui, seperti menghafalkan urutan pergantian warna lampu lalu lintas.
Menggunakan pencahayaan atau lampu yang terang di rumah dan kantor agar membantu memperjelas warna yang ada.
Berkonsultasi rutin ke dokter terkait.</string>
<string name="msg_apa_itu_buta_w">Apa itu 
Buta
Warna Parsial?</string>
<string name="lbl_penjelasan">Penjelasan</string>
<string name="msg_penyakit_kronis">Penyakit Kronis
Buta warna sebagian dapat diakibatkan oleh penyakit kronis yang membuat penderitanya tidak dapat membedakan warna-warna tertentu. Beberapa penyakit yang umumnya dapat menyebabkan kondisi ini adalah:
Diabetes
Penyakit Alzheimer
Glaukoma
Penyakit Parkinson
Faktor Keturunan
Buta warna parsial lebih sering dirurunkan secara genetik dari orang tua ke anak. Seperti yang telah disebutkan sebelumnya, penderita kondisi ini didominasi oleh pria. Adapun tingkatan keparahan dari kondisi ini bervariasi, mulai dari ringan,sedang, hingga berat dan dapat memengaruhi kedua mata.

Perlu diketahui bahwa kondisi ini bisa diturunkan dari orang tua yang tidak menderita buta warna, tetapi merupakan carrier atau pembawa kelainan gen. Umumnya, ibu yang tidak memiliki gejala buta parsial tetapi membawa kelainan gen akan menurunkan kondisi kebutaan warna parsial ini kepada anak laki-lakinya. 
Efek Samping Obat
Buta warna sebagian juga bisa disebabkan oleh konsumsi obat-obatan tertentu yang digunakan untuk mengatasi beberapa gangguan kesehatan atau penyakit seperti:
Penyaki Jantung
Hipertensi
Infeksi
Penyakit Autoimun
Gangguan Saraf
Gangguan Psikologis
Bertambahnya Usia
Kemampuan untuk melihat warna bisa menurun seiring dengan bertambahnya usia. Ini merupakan salah satu faktor alamiah yang perlu diantisipasi. Sekalipun sulit disembuhkan, penderitanya masih dapat beraktivitas seperti biasa dan beradaptasi dengan kondisi tersebut.
Terdapat Cairan Kimia
Berhati-hatilah ketika bekerja dengan cairan kimia berbahaya. Gunakan kacamata pengaman agar mata terhindar dari percikan atau tumpahan cairan berbahaya di tempat kerja seperti karbon disulfida atau pupuk yang dapat menyebabkan defisiensi penglihatan warna.</string>
</resources>
